Fixed collapse button

--- a/web/home/style/index.css
+++ b/web/home/style/index.css
@@ -1,7 +1,3 @@
-body {
-    overflow-y: hidden;
-}
-
 #threejs {
     position: absolute;
     padding: 0;
